Fix height on mobile

--- a/style.css
+++ b/style.css
@@ -5,7 +5,9 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 15px;
   height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   display: grid;
+  /* For mobile make a media query, calculate the height and adjust the rows */
   grid-template-rows: auto 34px;
   grid-template-areas:
     'main'
@@ -84,7 +86,7 @@ hr {
   display: flex;
   align-items: center;
   height: 24px;
-  width: 59px;
+  width: 65px;
   padding-left: 3px;
   font-weight: bold;
   cursor: pointer;
